# ftrio-python

./: .gitignore  CHANGELOG.md  PORTING_NOTES.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CNAME  index.html
ftrio/: __init__.py  _periodic.py  buffer.py  builder.py  cli.py  config.py  context.py  decorators.py  enums.py  exceptions.py  feature_toggle.py  interfaces.py  override_resolver.py  provider.py
ftrio/parsers/: __init__.py  app_settings_toggle_parser.py  composite_toggle_parser.py  environment_variable_toggle_parser.py  strategy_toggle_parser.py
ftrio/providers/: __init__.py  azure_app_config.py  http.py
ftrio/strategies/: __init__.py  ab_test_strategy.py  attribute_rule_strategy.py  blue_green_strategy.py  boolean_strategy.py  percentage_rollout_strategy.py  user_targeting_strategy.py
playground/: __init__.py  __main__.py  appsettings.Development.json  appsettings.json
tests/: appsettings.json  conftest.py
tests/integration/: test_config.py  test_feature_toggle.py  test_feature_toggle_async.py
tests/unit/: test_ab_determinism.py  test_app_settings_parser.py  test_buffer.py  test_builder.py  test_context_strategies.py  test_environment.py  test_lint.py  test_overrides.py  test_package_metadata.py  test_providers.py  test_strategies.py
